@@ -43,8 +43,8 @@ ElemTuple = collections.namedtuple('ElemTuple', ['elem', 'label'])
 
 Target = usertypes.enum('Target', ['normal', 'tab', 'tab_fg', 'tab_bg',
                                    'window', 'yank', 'yank_primary', 'run',
-                                   'fill', 'hover', 'rapid', 'rapid_win',
-                                   'download', 'userscript', 'spawn'])
+                                   'fill', 'hover', 'download', 'userscript',
+                                   'spawn'])
 
 
 @pyqtSlot(usertypes.KeyMode)
@@ -69,7 +69,6 @@ class HintContext:
                 yank/yank_primary: Yank to clipboard/primary selection.
                 run: Run a command.
                 fill: Fill commandline with link.
-                rapid: Rapid mode with background tabs
                 download: Download the link.
                 userscript: Call a custom userscript.
                 spawn: Spawn a simple command.
@@ -415,8 +414,6 @@ class HintManager(QObject):
             context: The HintContext to use.
         """
         target_mapping = {
-            Target.rapid: usertypes.ClickTarget.tab_bg,
-            Target.rapid_win: usertypes.ClickTarget.window,
             Target.normal: usertypes.ClickTarget.normal,
             Target.tab_fg: usertypes.ClickTarget.tab,
             Target.tab_bg: usertypes.ClickTarget.tab_bg,
@@ -437,7 +434,7 @@ class HintManager(QObject):
             action, elem, pos.x(), pos.y()))
         self.start_hinting.emit(target_mapping[context.target])
         if context.target in [Target.tab, Target.tab_fg, Target.tab_bg,
-                              Target.window, Target.rapid, Target.rapid_win]:
+                              Target.window]:
             modifiers = Qt.ControlModifier
         else:
             modifiers = Qt.NoModifier
@@ -802,7 +799,6 @@ class HintManager(QObject):
         self._context.args = args
         self._context.mainframe = mainframe
         self._context.group = group
-        self._handle_old_rapid_targets(win_id)
         self._init_elements()
         message_bridge = objreg.get('message-bridge', scope='window',
                                     window=self._win_id)
@@ -810,29 +806,6 @@ class HintManager(QObject):
         self._connect_frame_signals()
         modeman.enter(self._win_id, usertypes.KeyMode.hint,
                       'HintManager.start')
-
-    def _handle_old_rapid_targets(self, win_id):
-        """Switch to the new way for rapid hinting with a rapid target.
-
-        Args:
-            win_id: The window ID to display the warning in.
-
-        DEPRECATED.
-        """
-        old_rapid_targets = {
-            Target.rapid: Target.tab_bg,
-            Target.rapid_win: Target.window,
-        }
-        target = self._context.target
-        if target in old_rapid_targets:
-            self._context.target = old_rapid_targets[target]
-            self._context.rapid = True
-            name = target.name.replace('_', '-')
-            group_name = self._context.group.name.replace('_', '-')
-            new_name = self._context.target.name.replace('_', '-')
-            message.warning(
-                win_id, ':hint with target {} is deprecated, use :hint '
-                '--rapid {} {} instead!'.format(name, group_name, new_name))
 
     def handle_partial_key(self, keystr):
         """Handle a new partial keypress."""
